# film_projects

./: .gitattributes  .project  README.md
Houdini/dso/mantra/: VRAY_StampFile.C  VRAY_StampFile.h
Houdini/python/: cgiToChan.py
Maya/plugins/deformer/: main.cpp  smDef.h  smDefNode.cpp
Maya/plugins/terrain_constraint_maya_plugin/: CMakeLists.txt
Maya/plugins/terrain_constraint_maya_plugin/include/: singleton.h  softwareLookUp.h  terrainConstraintNode.h  timer.h  utils.h
Maya/plugins/terrain_constraint_maya_plugin/scr/: AEterrainConstraintNodeTemplate.mel  singleton.cpp  softwareLookUp.cpp  terrainConstraintNode.cpp  terrainConstraintPlugin.cpp  timer.cpp  utils.cpp
Maya/plugins/terrain_constraint_maya_plugin/tcn/: tcn.sln  tcn.vcproj  tcn.vcxproj  tcn.vcxproj.filters
Maya/plugins/terrain_constraint_maya_plugin/test/data/: terrainConstraintNode_maya 15.ma
Maya/plugins/texture/: cellNoise.py
Maya/scripts/python/TextureChecker/: Readme.txt  TextureCheck.py  textGui.py  textui.ui
Nuke/Plugins/cellNoise/: NoisePixelIOP.cpp  Voronoi.cpp  Voronoi.h
Renderman/Shader/soapBubble/: panoCompelete1.tif  soapBubble.sdl  soapBubble.sl  soapBubble2.rib
